@@ -1,11 +1,12 @@
 <html>
 <head><title>i.hate.vodacom4me</title></head>
 <body>
-<form method="post" id="formlogin" action="https://www.vodacom4me.co.za/vodacom4me-personal/login.do">
-<input type="text" name="V_LOGIN_NAME" value="" class="cellform" /><br />
-<input type="password" name="V_PASSWORD" value="" class="passwordform" maxlength="64" /><br />
-<input name="image" type="submit" id="Login" />
+<form method="post" id="formlogin" action="https://www.vodacom.co.za/portal/site/myaccount/template.VCOMLOGIN/action.process/">
+<input type="text" name="realm" value="realm1" class="cellform" /><br />
+<input type="text" name="logon" value="" class="cellform" /><br />
+<input type="password" name="password" value="" class="passwordform" maxlength="64" /><br />
+<input name="submit" type="submit" id="Login" />
 </form>
-<a href="http://www.vodacom4me.co.za/vodacom4me-personal/logout.do" title="Logoff">Logoff</a>
+<a href="https://www.vodacom.co.za/portal/site/myaccount/template.LOGOUT/" title="Logoff">Logoff</a>
 </body>
 </html>
