@@ -18,8 +18,8 @@ password=
 ;e.g.
 ;phonebook=~/.vodasms/phonenums
 [files]
-phonebook=<installdir>.phonenums
-log=<installdir>.smslog
+phonebook=<installdir>phonebook
+log=<installdir>smslog
 
 ;The vodacom4me site is written horribly, using these forms allows for much
 ;faster sms sending and saner code. Advanced users can tweak these.
